--- a/habitaciones.html
+++ b/habitaciones.html
@@ -61,7 +61,7 @@
         }
 
         section:hover {
-            opacity: 0.7;
+            opacity: 0.9;
             scale:calc(1.1);
         }
 
@@ -138,6 +138,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        footer #iconos div{
+            transition: scale 0.3s ease;
+        }
+
+        footer #iconos div:hover{
+            scale: calc(1.2);
         }
 
         #registro {
