--- a/reservar.html
+++ b/reservar.html
@@ -13,7 +13,7 @@
             background-repeat:no-repeat;
             background-attachment: scroll;
             font-family: Arial, sans-serif;
-            border: 1px solid black;
+            border: none;
             padding: 5px;
         }
         h1 {
@@ -24,35 +24,46 @@
         }
         h2 {
             display: inline-block;
-            border: 1px solid black;
+            border: none;
             padding: 5px;
             background-color: #26C6DA;
             margin-bottom: -10px;
             margin-left: 30px;
             border-radius: 10px;
         }
+
         input[type="submit"] {
             display: inline-block;
-            border: 1px solid black;
+            border: none;
             padding: 15px;
             font-size: 16px;
             font-weight: bold;
             background-color: #26C6DA;
             margin-left: calc(50% - 10px);
+            transition: all 0.3s ease;
         }
+
         input[type="submit"]:hover {
-            background-color: #009688;
+            background-color: dodgerblue;
+            scale: calc(1.1);
+        }
+
+        input[type="submit"]:active {
+            background-color: dodgerblue;
+            scale: calc(0.9);
         }
         
         .principal {
             background-color: #B2EBF2;
             padding: 20px;
-            border: 1px solid black;
-            transition: border 0.3s ease-in-out; 
+            border: none;
+            transition: all 0.3s ease; 
         }
+
         .principal:hover {
-            border: 10px solid #009688;
+            padding: 25px;
         }
+
         .principal:hover .informacion {
             font-size: 16px;
             opacity: 1;
@@ -62,6 +73,7 @@
             opacity: 0; 
             transition: opacity 0.3s ease-in-out; 
         }
+        
         #preferencias {
             margin: 10px;
         }
