--- a/formulario_registro.html
+++ b/formulario_registro.html
@@ -4,75 +4,92 @@
     <meta charset="UTF-8">
     <title>Registro de usuarios</title>
     <style>
+        
         body {
-            border: 1px solid #333;
+            font-family:Arial, Helvetica, sans-serif;
+            border: none;
             padding: 5px;
-            background-image: url("img/fondo123.jpeg");
+            background-image: url("img/fondo2.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: scroll;
         }
 
         h1 {
-            font-family: "Comic Sans MS", cursive, sans-serif;
             color: #333;
             padding: 5px;
             margin-bottom: 0px;
+            font-size: xx-large;
         }
 
         h2 {
             display: inline-block;
             border: 1px solid #333;
             padding: 5px;
-            background-color: #F8C471; /* Amarillo suave */
+            background-color: dodgerblue; /* LightSkyBlue */
             margin-bottom: -10px;
             margin-left: 30px;
+            border-radius: 5px; /* Radio de 5px */
         }
 
+        /* Estilos para el botón de enviar */
         input[type="submit"] {
-            display: inline-block;
-            border: 1px solid #333;
-            padding: 15px;
-            font-size: 16px;
-            font-weight: bold;
-            background-color: #F8C471; /* Amarillo suave */
-            margin-left: calc(50% - 10px);
+            display: block;
+            width: 200px; /* Ancho del botón */
+            padding: 10px;
+            margin: 20px auto;
+            background-color: dodgerblue; /* CornflowerBlue */
+            color: black;
+            font-size: larger;
+            font-weight: bolder;
+            border: 1px;
+            border-radius: 5px; /* Radio de 5px */
+            border-color: dodgerblue; /* RoyalBlue */
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease; /* Transiciones suaves */
         }
 
+        /* Estilos para la animación al pasar el ratón */
         input[type="submit"]:hover {
-            border-radius: 5px;
-            background: #E74C3C; /* Rojo suave */
+            transform: scale(1.1); /* Aumenta ligeramente el tamaño */
+            background-color: #4169e1; /* RoyalBlue */
+        }
+
+        /* Estilos para la animación al hacer clic */
+        input[type="submit"]:active {
+            transform: scale(0.9); /* Reduce ligeramente el tamaño */
+            background-color: blue; /* DodgerBlue */
+            transition-duration: 0.1s; /* Duración más corta al hacer clic */
         }
 
         .principal {
-            background-color: #F8C471; /* Amarillo suave */
+            background-color: #6ab0de; /* LightSkyBlue */
             padding: 20px;
-            border: 1px solid #333;
-            transition: border 0.3s ease-in-out;
+            border: none;
+            transition: border 0.3s ease-in-out; /* Transición suave para el borde */
+            border-radius: 5px; /* Radio de 5px */
         }
 
         .principal:hover {
-            border: 10px solid #3498DB; /* Azul suave */
+            border-color: #add8e6; /* LightBlue */
         }
 
         .principal:hover .informacion {
             font-size: 16px;
             opacity: 1;
+            transition: font-size 0.3s ease, opacity 0.3s ease; /* Transiciones suaves */
         }
 
         .informacion {
             font-size: 0px;
             opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-
-        #preferencias {
-            margin: 10px;
+            transition: font-size 0.3s ease, opacity 0.3s ease; /* Transiciones suaves */
         }
 
         .intermedio {
-            background-color: #FADBD8; /* Rosa suave */
+            background-color: #87ceeb; /* SkyBlue */
             padding: 10px;
+            border-radius: 5px; /* Radio de 5px */
         }
 
         .auxiliar {
@@ -82,7 +99,7 @@
         }
 
         #aux1, #aux3, #aux10 {
-            border-right: 5px solid #F8C471; /* Amarillo suave */
+            border-right: 5px solid #6ab0de; /* LightSkyBlue */
         }
 
         #aux10 label div, #aux11 label div {
@@ -96,6 +113,12 @@
         #intermedio4 {
             margin-top: 10px;
         }
+
+        #preferencias{
+            margin-top: 10px;
+            color: black;
+        }
+    
 
     </style>
 </head>
