formulario registro actualizado con base de datos

--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="presentacion.html">¿Quién somos?</a></li>
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="eventos.html">Eventos</a></li>
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="#">Contacto</a></li>
-				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="#">Login</a></li>
+				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="login.html">Login</a></li>
 			</ul>
 
 		</nav>
@@ -75,7 +75,7 @@
 						<p>Las últimas novedades</p>					
 					</div>
 				</a>
-				<a href="#">
+				<a href="login.html">
 					<div id="caja4" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/gestion.png">
 						<h1>Login</h1>
@@ -92,8 +92,8 @@
 					<p>Número de habitaciones libres: [Insertar número]</p>
 					<p>Capacidad total del hotel: [Insertar número]</p>
 					<p>Número de huéspedes alojados: [Insertar número]</p>
-					<button id="boton"><a href="">Login</a></button>
-					<button id="boton"><a href="formulario_registro.html">Registro</a></button>
+					<button id="boton"><a href="login.html">Login</a></button>
+					<button id="boton"><a href="formulario_registro.php">Registro</a></button>
 				</aside>
 			</div>
 		</main>
