--- a/habitaciones.html
+++ b/habitaciones.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="img/logos/logo.png">
     <style>
         body {
-            background-image: url("img/fondo2.png");
+            background-image: url("img/fondos/fondo2.png");
             background-size: cover;
             background-repeat:no-repeat;
             background-attachment: scroll;
@@ -47,7 +47,7 @@
         }
 
         section {
-            background-image: url("img/fondo_azul_suave.png");
+            background-image: url("img/fondos/fondo_azul_suave.png");
             background-size: cover;
             background-repeat:no-repeat;
             background-attachment: scroll;
