--- a/presentacion.html
+++ b/presentacion.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="img/logos/logo.png">
     <style>
         body {
-            background-image: url("img/fondo2.png");
+            background-image: url("img/fondos/fondo2.png");
             background-size: cover;
             background-repeat:no-repeat;
             background-attachment: scroll;
