Links arreglados, ruta fondos correcta

--- a/main.html
+++ b/main.html
@@ -449,8 +449,8 @@
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="servicios.html">Servicios</a></li>
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="presentacion.html">¿Quién somos?</a></li>
 				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="eventos.html">Eventos</a></li>
-				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="login.html">Contacto</a></li>
-				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="formulario_registro.php">Login</a></li>
+				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="#">Contacto</a></li>
+				<li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a id="boton" href="login.html">Login</a></li>
 			</ul>
 
 		</nav>
@@ -459,14 +459,14 @@
 			SECCION 3
 			=============================================-->
 			<div id="seccion3" class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-				<a href="habitaciones_e14P4.html">
+				<a href="habitaciones.html">
 					<div id="caja1" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/habitaciones/habitacion_doble.jpg">
 						<h1>Habitaciones</h1>
 						<p>Disfrute de una amplia variedad de habitaciones</p>
 					</div>
 				</a>
-				<a href="servicios_e14P4.html">
+				<a href="servicios.html">
 					<div id="caja2" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/servicios/servicio_habitaciones.jpg">
 						<h1>Servicios</h1>
@@ -480,7 +480,7 @@
 						<p>Las últimas novedades en actividades para todas las edades</p>					
 					</div>
 				</a>
-				<a href="#">
+				<a href="presentacion.html">
 					<div id="caja4" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/servicios/piscina2.jpg">
 						<h1>Conócenos</h1>
@@ -497,8 +497,8 @@
 					<p>Número de habitaciones libres: [Insertar número]</p>
 					<p>Capacidad total del hotel: [Insertar número]</p>
 					<p>Número de huéspedes alojados: [Insertar número]</p>
-					<button id="boton"><a href="registro_e14P4.html">Login</a></button>
-					<button id="boton"><a href="registro_e14P4.html">Registro</a></button>
+					<button id="boton"><a href="login.html">Login</a></button>
+					<button id="boton"><a href="formulario_registro.php">Registro</a></button>
 				</aside>
 			</div>
 		</main>
