tengo que meter la gestion de tarjeta de credito

--- a/eventos.html
+++ b/eventos.html
@@ -136,7 +136,7 @@
 <body>
     <div class="contenedor">
         <header>
-            <img id="logo-largo" src="./img/logos/logo-largo.png" alt="Logo Hotel Luna">
+            <a href="presentacion.html"><img id="logo-largo" src="./img/logos/logo-largo.png" alt="Logo Hotel Palace"></a>
         </header>
         <main>
             <h1>Eventos destacados</h1>
