--- a/main.html
+++ b/main.html
@@ -149,7 +149,7 @@
             scale: calc(0.9);
         }
 
-        #seccion3 h1{
+        #seccion3 h2{
             font-family: Arial, Helvetica, sans-serif, cursive;
             font-size:40px;
             padding:10px;
@@ -462,35 +462,35 @@
 				<a href="habitaciones.html">
 					<div id="caja1" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/habitaciones/habitacion_doble.jpg">
-						<h1>Habitaciones</h1>
-						<p>Disfrute de una amplia variedad de habitaciones</p>
+						<h2>Habitaciones</h2>
+						<p>Disfrute de una amplia oferta</p>
 					</div>
 				</a>
 				<a href="servicios.html">
 					<div id="caja2" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/servicios/servicio_habitaciones.jpg">
-						<h1>Servicios</h1>
+						<h2>Servicios</h2>
 						<p>Relájese con vistas a la Alhambra</p>					
 					</div>
 				</a>
 				<a href="eventos.html">
 					<div id="caja3" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/servicios/spa3.jpg">
-						<h1>Eventos de interés</h1>
-						<p>Las últimas novedades en actividades para todas las edades</p>					
+						<h2>Eventos</h2>
+						<p>Las últimas novedades</p>					
 					</div>
 				</a>
 				<a href="presentacion.html">
 					<div id="caja4" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="img/servicios/piscina2.jpg">
-						<h1>Conócenos</h1>
+						<h2>Conócenos</h2>
 						<p>Eche un vistazo a nuestras instalaciones</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 				<!-- ZONA LATERAL SECUNDARIA -->
-				<aside>
+				<aside class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<!-- Información secundaria aquí -->
 					<h2>Información secundaria</h2>
 					<p>Número total de habitaciones: [Insertar número]</p>
