--- a/main.html
+++ b/main.html
@@ -425,16 +425,19 @@
 		SECCION 1
 		=============================================-->
 		<header class="fila">
-			
-			<div id="logo" class="col-lg-1 col-md-1 col-sm-2 col-xs-12">
-				<img id="logo" src="img/logos/logo-azul.png" width="120">
-			</div>
+			<a href="presentacion.html">
+			    <div id="logo" class="col-lg-1 col-md-1 col-sm-2 col-xs-12">
+				    <img id="logo" src="img/logos/logo-azul.png" width="120">
+			    </div>
+            </a>
 
 			<div class="col-lg-6 col-md-7 col-sm-5 col-xs-0"></div>
 
-			<div class="col-lg-5 col-md-4 col-sm-5 col-xs-12">
-				<img id="logo-largo" src="img/logos/logo-largo.png">
-			</div>
+            <a href="presentacion.html">
+			    <div class="col-lg-5 col-md-4 col-sm-5 col-xs-12">
+				    <img id="logo-largo" src="img/logos/logo-largo.png">
+			    </div>
+            </a>
 
 		</header>
 
